# EX4

./: AStar.h  Astar.h  BestFirstSearch.h  BreadthFirstSearch.h  CMakeLists.txt  CacheManager.h  CacheMfrom2.h  ClientHandler.h  DSearcher.h  DepthFirstSearch.cpp  DepthFirstSearch.h  FileCacheManager.cpp  FileCacheManager.h  Matrix.cpp  Matrix.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  OA.h  Point.cpp  Point.h  README.md  Searchable.h  Searcher.h  SerialServer.cpp  SerialServer.h  Server.h  Solver.h  State.h  StringReverser.cpp  StringReverser.h  ex2.h  main.cpp  server_side.h
